# social-cleanup-machine

./: AGENTS.md  PLAN.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: postmortem.yml
.github/workflows/: ci-main.yml  ci-pr.yml  docs-governance.yml  release.yml  rollback.yml  security.yml
backend/api/: __init__.py  main.py
backend/api/routes/: health.py
docs/: PRD.md
docs/adr/: ADR-001-modularer-monolith.md  ADR-002-llm-als-adapter.md  ADR-003-json-contract-und-repair-loop.md
docs/arc42/: 00-index.md  01-einfuehrung-und-ziele.md  02-randbedingungen.md  03-kontext-und-abgrenzung.md  04-loesungsstrategie.md  05-bausteinsicht.md  06-laufzeitsicht.md  07-verteilungssicht.md  08-querschnittliche-konzepte.md  09-architekturentscheidungen.md  10-qualitaetsanforderungen.md  11-risiken-und-technische-schulden.md  12-glossar.md
docs/diagrams/: c4-container.puml  c4-komponenten.puml  c4-kontext.puml  db-erd.puml  laufzeit-sequenz.puml  verteilung.puml
docs/operations/: github-governance.md  release-and-rollback.md
scripts/github/: apply-governance.sh
tests/: conftest.py
tests/api/: test_health.py
tests/contracts/: test_health_contract.py
