[project]
name = "social-cleanup-machine"
version = "0.1.0"
description = "Backend bootstrap for Social Clean-Up Machine"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<0.116",
  "pydantic>=2.8,<2.9",
  "uvicorn>=0.30,<0.31",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<0.28",
  "mypy>=1.11,<1.12",
  "pytest>=8.3,<8.4",
  "ruff>=0.6,<0.7",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = "(^tests/|^docs/)"
